--- a/index.html
+++ b/index.html
@@ -1917,12 +1917,14 @@ const operatorUsername = "budapuff_meneger";
 "POD-системы": [
     {
       id: "9 Pound Hammer",
+      name: "9 Pound Hammer",
       price: 5650,
       image: "pods/9poundhammer.png",
       description: "Компактная POD-система с высокой мощностью и стабильной тягой."
     },
     {
       id: "Big Bad Bear",
+      name: "Big Bad Bear",
       price: 5650,
       image: "pods/bigbadbear.png",
       description: "Мощная POD-система с удобной заправкой и долгой работой аккумулятора."
@@ -1932,18 +1934,21 @@ const operatorUsername = "budapuff_meneger";
   "Съедобные товары": [
     {
       id: "Browne",
+      name: "Browne",
       price: 3550,
       image: "food/broune.png",
       description: "Насыщенный шоколадный вкус с мягкой текстурой."
     },
     {
       id: "Cookie",
+      name: "Cookie",
       price: 2850,
       image: "food/cookie.png",
       description: "Классическое печенье с приятной сладостью."
     },
     {
       id: "THC Cherry",
+      name: "THC Cherry",
       price: 2250,
       image: "food/thc_cherry.png",
       description: "Сладкая вишнёвая нотка с ярким ароматом."
@@ -1953,6 +1958,7 @@ const operatorUsername = "budapuff_meneger";
     "Расслабляющий чай": [
   {
     id: "Kratom",
+    name: "KRATOM",
     price: 2850,
     image: "tea/relax_tea.png",
     description:
@@ -1978,6 +1984,7 @@ Kratom Tea — это насыщенный травяной напиток с г
 
     {
         id: "NIAGARA",
+      name: "NIAGARA",
         price: 1500,
         images: [
             "mushrooms/mushroom_1_1.jpg",
@@ -2002,6 +2009,7 @@ Kratom Tea — это насыщенный травяной напиток с г
 
     {
         id: "HYBRID ALBINO A+",
+      name: "HYBRID ALBINO A+",
         price: 1300,
         images: [
             "mushrooms/mushroom_2_1.jpg",
@@ -2033,6 +2041,7 @@ Kratom Tea — это насыщенный травяной напиток с г
 
     {
         id: "McKENNAII #2",
+      name: "McKENNAII #2",
         price: 1200,
         images: [
             "mushrooms/mushroom_3_1.jpg",
@@ -2057,6 +2066,7 @@ Kratom Tea — это насыщенный травяной напиток с г
 
         {
             id: "Orange Creampop Auto",
+          name: "Orange Creampop Auto",
             price: 2500,
             images: [
                 "/rose_seeds/auto/auto_1_1.jpg",
@@ -2077,6 +2087,7 @@ Kratom Tea — это насыщенный травяной напиток с г
 
         {
             id: "Gelato Auto",
+          name: "Gelato Auto",
             price: 2400,
             images: [
                 "/rose_seeds/auto/auto_2_1.jpg",
@@ -2097,6 +2108,7 @@ Kratom Tea — это насыщенный травяной напиток с г
 
         {
             id: "Wedding Cake Auto",
+          name: "Wedding Cake Auto",
             price: 2600,
             images: [
                 "/rose_seeds/auto/auto_3_1.jpg",
@@ -2117,6 +2129,7 @@ Kratom Tea — это насыщенный травяной напиток с г
 
         {
             id: "Gorilla Glue Auto",
+          name: "Gorilla Glue Auto",
             price: 2550,
             images: [
                 "/rose_seeds/auto/auto_4_1.jpg",
@@ -2137,6 +2150,7 @@ Kratom Tea — это насыщенный травяной напиток с г
 
         {
             id: "Zkittlez Auto",
+          name: "Zkittlez Auto",
             price: 2450,
             images: [
                 "/rose_seeds/auto/auto_5_1.jpg",
@@ -2160,6 +2174,7 @@ Kratom Tea — это насыщенный травяной напиток с г
 
         {
             id: "Orange Creampop FEM",
+          name: "Orange Creampop FEM",
             price: 2700,
             images: [
                 "/rose_seeds/photo/photo_1_1.jpg",
@@ -2180,6 +2195,7 @@ Kratom Tea — это насыщенный травяной напиток с г
 
         {
             id: "Gelato FEM",
+          name: "Gelato FEM",
             price: 2800,
             images: [
                 "/rose_seeds/photo/photo_2_1.jpg",
@@ -2200,6 +2216,7 @@ Kratom Tea — это насыщенный травяной напиток с г
 
         {
             id: "Wedding Cake FEM",
+          name: "Wedding Cake FEM",
             price: 2900,
             images: [
                 "/rose_seeds/photo/photo_3_1.jpg",
@@ -2220,6 +2237,7 @@ Kratom Tea — это насыщенный травяной напиток с г
 
         {
             id: "Gorilla Glue FEM",
+          name: "Gorilla Glue FEM",
             price: 2850,
             images: [
                 "/rose_seeds/photo/photo_4_1.jpg",
@@ -2240,6 +2258,7 @@ Kratom Tea — это насыщенный травяной напиток с г
 
         {
             id: "Zkittlez FEM",
+          name: "Zkittlez FEM",
             price: 2750,
             images: [
                 "/rose_seeds/photo/photo_5_1.jpg",
