--- a/index.html
+++ b/index.html
@@ -1646,10 +1646,26 @@ const operatorUsername = "budapuff_meneger";
 
   "Жидкости": [
     {
-      name: "2780",
-      price: 400,
+      name: "THC Liquid Maui Wowie 89 mg 30 ml",
+      price: 4350,
       image: "liquids/2780.jpg",
-      description: "Насыщенный вкус с мягким послевкусием. Отлично подходит для ежедневного использования."
+      description: `
+🌺 Жидкость 89 мг – Maui Wowie | 30 мл
+
+Премиальная жидкость от Canapuff с гармоничным и сбалансированным профилем.
+Подходит для тех, кто ценит качество и мягкое комфортное действие.
+
+🔬 Содержание активных компонентов ≤ 0,2% — без выраженного психоактивного эффекта.
+
+🌈 Эффекты:
+😊 Лёгкая эйфория и расслабление
+🎨 Усиление восприятия
+🍽 Стимуляция аппетита
+🩹 Возможное снижение боли и тошноты
+
+🔌 Подходит для POD-систем
+📦 Объём: 30 мл
+`,
     },
     {
       name: "2786",
