--- a/index.html
+++ b/index.html
@@ -1650,12 +1650,12 @@ const operatorUsername = "budapuff_meneger";
       price: 4350,
       image: "liquids/2780.jpg",
       description: `
-🌺 Жидкость 89 мг – Maui Wowie | 30 мл
+🌺 Жидкость с ТГК – Maui Wowie | 30 мл
 
 Премиальная жидкость от Canapuff с гармоничным и сбалансированным профилем.
 Подходит для тех, кто ценит качество и мягкое комфортное действие.
 
-🔬 Содержание активных компонентов ≤ 0,2% — без выраженного психоактивного эффекта.
+🔬 Содержание ТГК ≤ 12%.
 
 🌈 Эффекты:
 😊 Лёгкая эйфория и расслабление
@@ -1668,56 +1668,70 @@ const operatorUsername = "budapuff_meneger";
 `,
     },
     {
-      name: "2786",
-      price: 450,
+      name: "THC Liquid 89 mg 1000 mg CBC Weeding Cake 30 ml",
+      price: 4350,
       image: "liquids/2786_1.jpg",
-      description: "Сбалансированная жидкость с приятным ароматом и лёгкой сладостью."
+      description: `
+Премиальная жидкость с тщательно сбалансированной формулой ТГК ✨  
+Идеально подходит для тех, кто ценит мягкое, гармоничное и комфортное действие.
+
+🔬 Содержание ТГК ≤ 12%.
+
+🌈 Особенности:
+😊 Приподнятое настроение и ощущение лёгкости  
+🎨 Более яркие вкусовые и сенсорные ощущения  
+🧘 Глубокое расслабление и снижение напряжения  
+✨ Отличный выбор для спокойных и уютных моментов  
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`,
     },
     {
-      name: "2789",
-      price: 450,
+      name: "THC Liquid 89mg 2000mg CBD Wild Watermelon 30ml",
+      price: 4350,
       image: "liquids/2789.jpg",
       description: "Яркий вкус с плотным паром и длительным ароматом."
     },
     {
-      name: "Dosi Kush",
-      price: 500,
+      name: "THP420 Liquid Dosi Kush 1.500mg",
+      price: 4350,
       image: "liquids/dosi_kush.jpg",
       description: "Глубокий насыщенный вкус с мягкой сладковатой ноткой."
     },
     {
-      name: "LCG",
-      price: 500,
+      name: "HHC-A Liquid Lemon Cherry Gelato 1.500 mg",
+      price: 4350,
       image: "liquids/lcg.jpg",
       description: "Освежающий вкус с лёгким цитрусовым оттенком."
     },
     {
-      name: "Mint",
-      price: 450,
+      name: "THC Liquid 89 mg 2000 mg CBD Fresh Mint 30 ml",
+      price: 4350,
       image: "liquids/mint.jpg",
       description: "Чистая освежающая мята с прохладным эффектом."
     },
     {
-      name: "OG Cush",
-      price: 500,
+      name: "THC Liquid 89mg 1000mg CBC OG Kush 30ml",
+      price: 4350,
       image: "liquids/ogcush.jpg",
       description: "Плотный вкус с насыщенным ароматом и мягким паром."
     },
     {
-      name: "Original Z",
-      price: 500,
+      name: "THP420 Liquid Original Z 1.500mg",
+      price: 4350,
       image: "liquids/original_z.jpg",
       description: "Сладковатый аромат с лёгкой фруктовой ноткой."
     },
     {
-      name: "Permanent Marker",
-      price: 550,
+      name: "9H-THC Liquid Permanent Marker 1.500mg",
+      price: 4350,
       image: "liquids/permanent_marker.jpg",
       description: "Интенсивный аромат с ярким и долгим послевкусием."
     },
     {
-      name: "Super Lemon Haze",
-      price: 550,
+      name: "9H-HHC Liquid Super Lemon Haze 1.500mg",
+      price: 4350,
       image: "liquids/super_lemon_haze.jpg",
       description: "Яркий лимонный вкус с освежающим эффектом."
     }
