--- a/index.html
+++ b/index.html
@@ -1691,49 +1691,180 @@ const operatorUsername = "budapuff_meneger";
       name: "THC Liquid 89mg 2000mg CBD Wild Watermelon 30ml",
       price: 4350,
       image: "liquids/2789.jpg",
-      description: "Яркий вкус с плотным паром и длительным ароматом."
+      description: `
+Жидкость с ТГК 🍉 Дикий арбуз | 30 мл
+
+Премиальная жидкость с тщательно сбалансированной формулой ✨  
+Отличный выбор для тех, кто ценит качество, мягкость и надёжность.
+
+🌿 Лёгкое и комфортное действие — подходит для расслабленного отдыха.
+
+🔬 Содержание ТГК ≤ 12%.
+
+🌈 Особенности:
+😊 Приподнятое настроение  
+🎨 Яркие вкусовые ощущения  
+🧘 Мягкое расслабление  
+✨ Комфортный формат для повседневного использования  
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`,
     },
     {
       name: "THP420 Liquid Dosi Kush 1.500mg",
       price: 4350,
       image: "liquids/dosi_kush.jpg",
-      description: "Глубокий насыщенный вкус с мягкой сладковатой ноткой."
+      description: `
+Жидкость с ТГК 🌿 Доси Куш | 30 мл
+
+Изысканный вкус, вдохновлённый классическим профилем Dosy Kush ✨  
+Гармоничное сочетание насыщенных и мягких нот создаёт по-настоящему уютную атмосферу.
+
+🌬 Вкусовой профиль:
+🌲 Лёгкие хвойные акценты  
+🌰 Тёплые ореховые оттенки  
+🍪 Нежные сладковатые ноты с кремовым послевкусием  
+🌿 Мягкий травянистый штрих в финале  
+
+Каждая затяжка раскрывается постепенно, создавая глубокий и сбалансированный вкус с бархатистым послевкусием.
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`,
     },
     {
       name: "HHC-A Liquid Lemon Cherry Gelato 1.500 mg",
       price: 4350,
       image: "liquids/lcg.jpg",
-      description: "Освежающий вкус с лёгким цитрусовым оттенком."
+      description: `
+Жидкость с ТГК 🍋🍒 Лимонно-вишнёвый Gelato | 30 мл
+
+Ароматная жидкость ТГК с ярким и насыщенным вкусовым профилем ✨  
+Идеальное сочетание цитрусовой свежести и сладкой вишнёвой глубины создаёт гармоничный и запоминающийся вкус.
+
+🌬 Вкусовой профиль:
+🍋 Освежающие лимонные ноты  
+🍒 Сочная сладость спелой вишни  
+🍦 Мягкие сливочные оттенки Gelato  
+✨ Бархатистое и сбалансированное послевкусие  
+
+Каждая затяжка раскрывается постепенно, создавая тёплую и уютную атмосферу — словно спокойный вечер в приятной компании.
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`,
     },
     {
       name: "THC Liquid 89 mg 2000 mg CBD Fresh Mint 30 ml",
       price: 4350,
       image: "liquids/mint.jpg",
-      description: "Чистая освежающая мята с прохладным эффектом."
+      description: `
+Жидкость с ТГК 🌿 Fresh Mint | 30 мл
+
+Освежающая жидкость ТГК с чистым и бодрящим мятным профилем ✨  
+Отличный выбор для тех, кто ценит качество, надёжность и выразительный вкус.
+
+🌬 Вкусовой профиль:
+🌱 Интенсивная свежесть натуральной мяты  
+❄️ Прохладные охлаждающие нотки  
+🍃 Лёгкий травянистый акцент  
+✨ Чистое и освежающее послевкусие  
+
+Идеально подойдёт для любителей свежих, прохладных ароматов и лёгкого мятного баланса.
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`,
     },
     {
       name: "THC Liquid 89mg 1000mg CBC OG Kush 30ml",
       price: 4350,
       image: "liquids/ogcush.jpg",
-      description: "Плотный вкус с насыщенным ароматом и мягким паром."
+      description: `
+Жидкость с ТГК 🌿 OG Kush | 30 мл
+
+Премиальная жидкость ТГК с выразительным и насыщенным вкусом ✨  
+Отличный выбор для ценителей классических, глубоких ароматов.
+
+🌬 Вкусовой профиль:
+🌲 Хвойные и древесные ноты  
+🌿 Лёгкие травянистые оттенки  
+🌰 Тёплый землистый акцент  
+✨ Мягкое и гармоничное послевкусие  
+
+Сбалансированный и многогранный вкус раскрывается постепенно, создавая насыщенное и благородное впечатление.
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`,
     },
     {
       name: "THP420 Liquid Original Z 1.500mg",
       price: 4350,
       image: "liquids/original_z.jpg",
-      description: "Сладковатый аромат с лёгкой фруктовой ноткой."
+      description: `
+Жидкость с ТГК 🍇 Original Z | 30 мл
+
+Ароматная жидкость от Canapuff с ярким и насыщенным вкусовым характером ✨  
+Идеальный выбор для ценителей глубоких и многослойных ароматов.
+
+🌬 Вкусовой профиль:
+🍬 Сладкие фруктовые ноты  
+🍇 Оттенки спелых ягод  
+🍭 Лёгкий конфетный акцент  
+✨ Мягкое, бархатистое послевкусие  
+
+Вкус раскрывается постепенно, создавая тёплую и уютную атмосферу — словно спокойный вечер в приятной обстановке.
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`,
     },
     {
       name: "9H-THC Liquid Permanent Marker 1.500mg",
       price: 4350,
       image: "liquids/permanent_marker.jpg",
-      description: "Интенсивный аромат с ярким и долгим послевкусием."
+      description: `
+Жидкость с ТГК 🖊 Permanent Marker | 30 мл
+
+Permanent Marker — выразительный терпеновый профиль с ярким цветочным характером и насыщенными виноградными оттенками ✨  
+В 2023 году этот сорт получил звание «Сорт года», покорив ценителей своей интенсивностью и узнаваемым ароматом.
+
+🌬 Вкусовой профиль:
+🌸 Богатые цветочные акценты  
+🍇 Сладкие оттенки фиолетового винограда  
+🖊 Характерная глубокая, слегка чернильная нота  
+✨ Сложное и многослойное послевкусие  
+
+Сочетание сладких и цветочных нюансов создаёт гармоничное, сбалансированное и запоминающееся впечатление.
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`,
     },
     {
       name: "9H-HHC Liquid Super Lemon Haze 1.500mg",
       price: 4350,
       image: "liquids/super_lemon_haze.jpg",
-      description: "Яркий лимонный вкус с освежающим эффектом."
+      description: `
+Жидкость с ТГК 🍋 Super Lemon Haze | 30 мл
+
+Яркий и многослойный вкусовой профиль, вдохновлённый сочетанием Lemon Skunk и Super Silver Haze ✨  
+Этот аромат раскрывается как настоящее путешествие — от цитрусовой сладости до глубоких древесных оттенков.
+
+🌬 Вкусовой профиль:
+🍋 Сладкая и пряная лимонная глазурь  
+⛽ Лёгкий резкий акцент с характерной глубиной  
+🌲 Древесные ноты старого кедра  
+🍍 Оттенки сочных тропических фруктов и ананаса  
+🥥 Лёгкая сладость кокосового сахара  
+
+Аромат постепенно развивается, создавая сложное, изысканное и запоминающееся впечатление с благородным послевкусием.
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`,
     }
   ],
 
