--- a/index.html
+++ b/index.html
@@ -4237,7 +4237,8 @@ backButton.onClick(() => {
 
     localStorage.setItem("favorites", JSON.stringify(favorites));
 
-    renderCategoryContent(category); // обновляем карточки
+    if (currentView === "category") {
+    renderCategoryContent(category);
 }
   function renderFavorites() {
 
