--- a/index.html
+++ b/index.html
@@ -4240,6 +4240,7 @@ backButton.onClick(() => {
     if (currentView === "category") {
     renderCategoryContent(category);
 }
+    }  // ← ВОТ ЭТА СКОБКА ОБЯЗАТЕЛЬНА
   function renderFavorites() {
 
     currentView = "favorites";
