--- a/index.html
+++ b/index.html
@@ -1651,6 +1651,31 @@ button {
 .favorite-btn.active {
     background: rgba(255, 0, 80, 0.9);
 }
+  .order-card {
+    background: #1e1e1e;
+    padding: 16px;
+    border-radius: 16px;
+    margin-bottom: 16px;
+}
+
+.order-header {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+    opacity: 0.8;
+    margin-bottom: 8px;
+}
+
+.order-total {
+    font-weight: bold;
+    margin-bottom: 8px;
+}
+
+.order-card details summary {
+    cursor: pointer;
+    color: #ff4d4d;
+    margin-bottom: 6px;
+}
 
 </style>
 </head>
@@ -4200,6 +4225,45 @@ backButton.onClick(() => {
 
     document.getElementById("main").innerHTML = html;
 }
+  function renderOrders() {
+
+    if (!userProfile || !userProfile.orders) {
+        showToast("Нет заказов");
+        return;
+    }
+
+    currentView = "orders";
+    currentCategory = null;
+    currentProduct = null;
+
+    saveState();
+    updateBackButton();
+    setActiveMenu(null);
+
+    const ordersHtml = userProfile.orders.map(order => `
+        <div class="order-card">
+            <div class="order-header">
+                <strong>Заказ №${order.order_number}</strong>
+                <span>${new Date(order.created_at).toLocaleString()}</span>
+            </div>
+            <div class="order-total">
+                Итого: ${order.total} ₽
+            </div>
+            <details>
+                <summary>Посмотреть состав</summary>
+                <pre>${order.order_text}</pre>
+            </details>
+        </div>
+    `).join("");
+
+    document.getElementById("content").innerHTML = `
+        <div class="orders-screen">
+            <h2>Мои заказы</h2>
+            ${ordersHtml || "<p>Заказов пока нет</p>"}
+        </div>
+    `;
+}
+  
   function showProfileError(message) {
     document.getElementById("main").innerHTML = `
         <div style="padding:20px">
