--- a/index.html
+++ b/index.html
@@ -1621,6 +1621,18 @@ button {
     text-align: center;
     cursor: pointer;
 }
+  .profile-card {
+    transition: transform 0.15s ease, box-shadow 0.15s ease;
+}
+
+.profile-card:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+}
+
+.profile-card:active {
+    transform: scale(0.96);
+}
 
 .profile-icon {
     font-size: 28px;
