--- a/index.html
+++ b/index.html
@@ -4235,7 +4235,7 @@ backButton.onClick(() => {
         </div>
     `;
 
-    document.getElementById("main").innerHTML = html;
+    document.getElementById("main").innerHTML =
 }
   function renderOrders() {
 
