--- a/index.html
+++ b/index.html
@@ -4235,7 +4235,7 @@ backButton.onClick(() => {
         </div>
     `;
 
-    document.getElementById("main").innerHTML =
+    document.getElementById("main").innerHTML = html;
 }
   function renderOrders() {
 
