--- a/index.html
+++ b/index.html
@@ -1678,9 +1678,13 @@ button {
     margin-bottom: 8px;
 }
   .order-status {
+    display: inline-block;
     margin-bottom: 8px;
-    font-size: 13px;
-    font-weight: 500;
+    padding: 4px 10px;
+    font-size: 12px;
+    font-weight: 600;
+    border-radius: 12px;
+    background: rgba(255, 152, 0, 0.15);
     color: #ff9800;
 }
 
