--- a/index.html
+++ b/index.html
@@ -1698,6 +1698,25 @@ button {
     color: #ff4d4d;
     margin-bottom: 6px;
 }
+  .status-pending {
+    background: rgba(255, 152, 0, 0.15);
+    color: #ff9800;
+}
+
+.status-processing {
+    background: rgba(33, 150, 243, 0.15);
+    color: #2196f3;
+}
+
+.status-done {
+    background: rgba(76, 175, 80, 0.15);
+    color: #4caf50;
+}
+
+.status-cancel {
+    background: rgba(244, 67, 54, 0.15);
+    color: #f44336;
+}
 
 </style>
 </head>
@@ -4272,8 +4291,8 @@ async function renderProfile() {
     <span>${new Date(order.created_at).toLocaleString()}</span>
 </div>
 
-<div class="order-status">
-    Статус: ${order.status || "Передано оператору"}
+<div class="order-status ${getStatusClass(order.status)}">
+    ${order.status || "Передано оператору"}
 </div>
             <div class="order-total">
                 Итого: ${order.total} ₽
@@ -4291,6 +4310,12 @@ async function renderProfile() {
             ${ordersHtml || "<p>Заказов пока нет</p>"}
         </div>
     `;
+}
+  function getStatusClass(status) {
+    if (status === "В обработке") return "status-processing";
+    if (status === "Завершён") return "status-done";
+    if (status === "Отменён") return "status-cancel";
+    return "status-pending";
 }
   
   function showProfileError(message) {
