--- a/index.html
+++ b/index.html
@@ -1717,6 +1717,53 @@ button {
     background: rgba(244, 67, 54, 0.15);
     color: #f44336;
 }
+  /* ===== CHECKOUT DESIGN ===== */
+
+.checkout-form {
+    margin-top: 15px;
+    padding: 18px;
+    background: #1e1f23;
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.checkout-form input,
+.checkout-form textarea {
+    width: 100%;
+    padding: 14px;
+    border-radius: 12px;
+    border: 1px solid #2c2d33;
+    background: #2a2b31;
+    color: white;
+    font-size: 14px;
+    outline: none;
+    transition: 0.2s;
+}
+
+.checkout-form input:focus,
+.checkout-form textarea:focus {
+    border-color: #ff3b6b;
+}
+
+.checkout-form textarea {
+    resize: none;
+    min-height: 70px;
+}
+
+#backBtn {
+    margin-bottom: 10px;
+}
+
+h2 {
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+
+.cart-summary {
+    margin-top: 20px;
+}
 
 </style>
 </head>
